[gd_scene load_steps=32 format=2]

[ext_resource path="res://models/Cap.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Double Joint.tscn" type="PackedScene" id=2]
[ext_resource path="res://Single Joint.tscn" type="PackedScene" id=3]
[ext_resource path="res://img/skin2.png" type="Texture" id=4]
[ext_resource path="res://shader/DoubleJoint.gdshader" type="Shader" id=6]
[ext_resource path="res://shader/SingleJoint.gdshader" type="Shader" id=7]
[ext_resource path="res://models/Cube.obj" type="ArrayMesh" id=10]
[ext_resource path="res://models/Body.obj" type="ArrayMesh" id=11]
[ext_resource path="res://script/PlayerController.gd" type="Script" id=13]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 4 )
uv1_scale = Vector3( 0.5, 0.25, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 4 )
uv1_scale = Vector3( 0.375, 0.25, 1 )
uv1_offset = Vector3( 0.25, 0.25, 0 )

[sub_resource type="ShaderMaterial" id=24]
shader = ExtResource( 6 )
shader_param/rot_x = 0.0
shader_param/rot_y = 0.0
shader_param/rotated = false
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.5, 0.75 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=25]
shader = ExtResource( 6 )
shader_param/rot_x = 0.0
shader_param/rot_y = 0.0
shader_param/rotated = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.5, 0.75 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=26]
shader = ExtResource( 7 )
shader_param/rot_x = 0.0
shader_param/rotated = false
shader_param/axis_z = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.5, 0.813 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=27]
shader = ExtResource( 7 )
shader_param/rot_x = 0.0
shader_param/rotated = true
shader_param/axis_z = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.5, 0.813 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 4 )
uv1_scale = Vector3( 0.25, 0.25, 1 )
uv1_offset = Vector3( 0.5, 0.75, 0 )

[sub_resource type="ShaderMaterial" id=28]
shader = ExtResource( 6 )
shader_param/rot_x = 0.0
shader_param/rot_y = 0.0
shader_param/rotated = false
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.625, 0.25 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=29]
shader = ExtResource( 6 )
shader_param/rot_x = 0.0
shader_param/rot_y = 0.0
shader_param/rotated = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.625, 0.25 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=30]
shader = ExtResource( 7 )
shader_param/rot_x = 0.0
shader_param/rotated = false
shader_param/axis_z = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.625, 0.313 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=31]
shader = ExtResource( 7 )
shader_param/rot_x = 0.0
shader_param/rotated = true
shader_param/axis_z = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.625, 0.313 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=13]
albedo_texture = ExtResource( 4 )
uv1_scale = Vector3( 0.25, 0.25, 1 )
uv1_offset = Vector3( 0.625, 0.25, 0 )

[sub_resource type="ShaderMaterial" id=32]
shader = ExtResource( 6 )
shader_param/rot_x = 0.0
shader_param/rot_y = 0.0
shader_param/rotated = false
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.25, 0.75 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=33]
shader = ExtResource( 6 )
shader_param/rot_x = 0.0
shader_param/rot_y = 0.0
shader_param/rotated = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.25, 0.75 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=34]
shader = ExtResource( 7 )
shader_param/rot_x = 0.0
shader_param/rotated = false
shader_param/axis_z = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.25, 0.813 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=35]
shader = ExtResource( 7 )
shader_param/rot_x = 0.0
shader_param/rotated = true
shader_param/axis_z = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0.25, 0.813 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=18]
albedo_texture = ExtResource( 4 )
uv1_scale = Vector3( 0.25, 0.25, 1 )
uv1_offset = Vector3( 0.25, 0.75, 0 )

[sub_resource type="ShaderMaterial" id=36]
shader = ExtResource( 6 )
shader_param/rot_x = 0.0
shader_param/rot_y = 0.0
shader_param/rotated = false
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0, 0.25 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=37]
shader = ExtResource( 6 )
shader_param/rot_x = 0.0
shader_param/rot_y = 0.0
shader_param/rotated = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0, 0.25 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=38]
shader = ExtResource( 7 )
shader_param/rot_x = 0.0
shader_param/rotated = false
shader_param/axis_z = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0, 0.313 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=39]
shader = ExtResource( 7 )
shader_param/rot_x = 0.0
shader_param/rotated = true
shader_param/axis_z = true
shader_param/skin_scale = Vector2( 0.25, 0.125 )
shader_param/skin_offset = Vector2( 0, 0.313 )
shader_param/skin_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=23]
albedo_texture = ExtResource( 4 )
uv1_scale = Vector3( 0.25, 0.25, 1 )
uv1_offset = Vector3( 0, 0.25, 0 )

[node name="Player" type="Spatial"]
script = ExtResource( 13 )
skin_texture = ExtResource( 4 )

[node name="Head" type="MeshInstance" parent="."]
transform = Transform( 8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 33.657, 0 )
material_override = SubResource( 2 )
mesh = ExtResource( 10 )
skeleton = NodePath("../..")

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 8, 0, 0, 0, 16, 0, 0, 0, 4, 0, 21.657, 0 )
material_override = SubResource( 3 )
mesh = ExtResource( 11 )

[node name="LeftArm" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.74846e-07, 4, 0, -4, -1.74846e-07, 0, 0, 0, 4, 6.828, 27.657, 0 )
material/0 = SubResource( 24 )
material/1 = SubResource( 25 )
skin_texture = ExtResource( 4 )
skin_scale = Vector2( 0.25, 0.125 )
skin_offset = Vector2( 0.5, 0.75 )

[node name="LeftArmEnd" type="Spatial" parent="LeftArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.707107, 0 )

[node name="LeftElbow" parent="LeftArm/LeftArmEnd" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
skeleton = NodePath("../..")
material/0 = SubResource( 26 )
material/1 = SubResource( 27 )
skin_texture = ExtResource( 4 )
skin_scale = Vector2( 0.25, 0.125 )
skin_offset = Vector2( 0.5, 0.813 )
axis_z = true

[node name="LeftElbowEnd" type="Spatial" parent="LeftArm/LeftArmEnd/LeftElbow"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="LeftHand" type="MeshInstance" parent="LeftArm/LeftArmEnd/LeftElbow/LeftElbowEnd"]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
material_override = SubResource( 8 )
mesh = ExtResource( 1 )

[node name="RightArm" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.74846e-07, -4, 0, 4, -1.74846e-07, 0, 0, 0, 4, -6.828, 27.657, 0 )
material/0 = SubResource( 28 )
material/1 = SubResource( 29 )
skin_texture = ExtResource( 4 )
skin_scale = Vector2( 0.25, 0.125 )
skin_offset = Vector2( 0.625, 0.25 )

[node name="RightArmEnd" type="Spatial" parent="RightArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.707107, 0 )

[node name="RightElbow" parent="RightArm/RightArmEnd" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
skeleton = NodePath("../..")
material/0 = SubResource( 30 )
material/1 = SubResource( 31 )
skin_texture = ExtResource( 4 )
skin_scale = Vector2( 0.25, 0.125 )
skin_offset = Vector2( 0.625, 0.313 )
axis_z = true

[node name="RightElbowEnd" type="Spatial" parent="RightArm/RightArmEnd/RightElbow"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="RigthHand" type="MeshInstance" parent="RightArm/RightArmEnd/RightElbow/RightElbowEnd"]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
material_override = SubResource( 13 )
mesh = ExtResource( 1 )

[node name="LeftLeg" parent="." instance=ExtResource( 2 )]
transform = Transform( -4, 6.03983e-07, 0, -6.03983e-07, -4, 0, 0, 0, 4, 2, 10.828, 0 )
material/0 = SubResource( 32 )
material/1 = SubResource( 33 )
skin_texture = ExtResource( 4 )
skin_scale = Vector2( 0.25, 0.125 )
skin_offset = Vector2( 0.25, 0.75 )

[node name="LeftLegEnd" type="Spatial" parent="LeftLeg"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.707107, 0 )

[node name="LeftKnee" parent="LeftLeg/LeftLegEnd" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
skeleton = NodePath("../..")
material/0 = SubResource( 34 )
material/1 = SubResource( 35 )
skin_texture = ExtResource( 4 )
skin_scale = Vector2( 0.25, 0.125 )
skin_offset = Vector2( 0.25, 0.813 )
axis_z = true

[node name="LeftKneeEnd" type="Spatial" parent="LeftLeg/LeftLegEnd/LeftKnee"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="LeftFeet" type="MeshInstance" parent="LeftLeg/LeftLegEnd/LeftKnee/LeftKneeEnd"]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
material_override = SubResource( 18 )
mesh = ExtResource( 1 )

[node name="RightLeg" parent="." instance=ExtResource( 2 )]
transform = Transform( -4, 6.03983e-07, 0, -6.03983e-07, -4, 0, 0, 0, 4, -2, 10.828, 0 )
material/0 = SubResource( 36 )
material/1 = SubResource( 37 )
skin_texture = ExtResource( 4 )
skin_scale = Vector2( 0.25, 0.125 )
skin_offset = Vector2( 0, 0.25 )

[node name="RightLegEnd" type="Spatial" parent="RightLeg"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.707107, 0 )

[node name="RightKnee" parent="RightLeg/RightLegEnd" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
skeleton = NodePath("../..")
material/0 = SubResource( 38 )
material/1 = SubResource( 39 )
skin_texture = ExtResource( 4 )
skin_scale = Vector2( 0.25, 0.125 )
skin_offset = Vector2( 0, 0.313 )
axis_z = true

[node name="RightKneeEnd" type="Spatial" parent="RightLeg/RightLegEnd/RightKnee"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="RightFeet" type="MeshInstance" parent="RightLeg/RightLegEnd/RightKnee/RightKneeEnd"]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
material_override = SubResource( 23 )
mesh = ExtResource( 1 )

[connection signal="endpoint_transform_updated" from="LeftArm" to="LeftArm/LeftArmEnd" method="set_transform"]
[connection signal="endpoint_transform_updated" from="LeftArm/LeftArmEnd/LeftElbow" to="LeftArm/LeftArmEnd/LeftElbow/LeftElbowEnd" method="set_transform"]
[connection signal="endpoint_transform_updated" from="RightArm" to="RightArm/RightArmEnd" method="set_transform"]
[connection signal="endpoint_transform_updated" from="RightArm/RightArmEnd/RightElbow" to="RightArm/RightArmEnd/RightElbow/RightElbowEnd" method="set_transform"]
[connection signal="endpoint_transform_updated" from="LeftLeg" to="LeftLeg/LeftLegEnd" method="set_transform"]
[connection signal="endpoint_transform_updated" from="LeftLeg/LeftLegEnd/LeftKnee" to="LeftLeg/LeftLegEnd/LeftKnee/LeftKneeEnd" method="set_transform"]
[connection signal="endpoint_transform_updated" from="RightLeg" to="RightLeg/RightLegEnd" method="set_transform"]
[connection signal="endpoint_transform_updated" from="RightLeg/RightLegEnd/RightKnee" to="RightLeg/RightLegEnd/RightKnee/RightKneeEnd" method="set_transform"]
